--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,11 +5,10 @@
 
 body {
     background-color: rgb(215, 181, 247);
-
 }
 
 main {
-    background-color: white;
+    background-color: rgb(250, 239, 79);
     width: 500px;
     margin: auto;
     padding: 10px;
